--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -17,8 +17,13 @@
             
         </div>
         <div class="properties">
-            <a asp-page="Create" class="btn btnWhite">Create New Order</a>
+            
             <div class="order-list2">
+                <div class="sorters">
+                    <div class="btns">
+                        <a asp-page="Create" class="btn bg-btn btnWhite">Create New Order</a>
+                    </div>
+                </div>
                 <table id="dataTable">
                     <tr>
                         <th>Employee ID</th>
@@ -42,6 +47,7 @@
                     }
                 </table>
             </div>
+            
         </div>
     </div>
 </div>
