--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -10,12 +10,22 @@
 
 <body>
     <nav>
-        <ul>
-            <li class="main-title">WCS Trainer</li>
-            <li><a asp-page="/Index">Home</a></li>
-            <li><a asp-page="TrainingOrders/Index">Admin Panel</a></li>
-            <li><a asp-page="TrainingOrders/Index">My Panel</a></li>
-        </ul>
+        <div class="nav-container">
+            <div class="nav-buttons">
+                <ul>
+                    <li class="main-title">WCS Trainer</li>
+                    <li><a asp-page="/Index">Home</a></li>
+                    <li><a asp-page="TrainingOrders/Index">My Panel</a></li>
+
+                </ul>
+            </div>
+            <div class="nav-options">
+                <a id="modeToggleBtn" class="btn bg-btn btnWhite">Light Mode</a>
+
+            </div>
+            
+        </div>
+        
     </nav>
 
     <div class="content">
@@ -29,3 +39,11 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+<script>
+    const modeToggleBtn = document.getElementById('modeToggleBtn');
+
+    modeToggleBtn.addEventListener('click', () => {
+        document.body.classList.toggle('light-mode');
+    });
+</script>
