--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -18,8 +18,11 @@
             <div class="order-list2">
                 <div class="sorters">
                     <p>Sort By:</p>
-                    <button onclick="sortTable(4)" class="btn btnWhite">Begin Date</button>
-                    <button onclick="sortTable(0)" class="btn btnWhite">ID Number</button>
+                    <div class="btns">
+                        <button onclick="sortTable(4)" class="btn bg-btn btnWhite">Begin Date</button>
+                        <button onclick="sortTable(0)" class="btn bg-btn btnWhite">ID Number</button>
+                    </div>
+                    
                 </div>
                 <table id="dataTable">
                     <tr>
