--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -5,27 +5,70 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Employee</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.FirstName)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.FirstName)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.LastName)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.LastName)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Status)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Status)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.TrainingOrders)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.TrainingOrders)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Skills)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Skills)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Availability)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Availability)</dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Employee.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+<div class="panel">
+    <div class="body">
+        <div class="side-bar">
+            <ul>
+                <a href="">Statistics</a>
+                <a asp-page="./Index">Training Orders</a>
+                <a asp-page="./Index">Manage Employees</a>
+                <a href="">Account Settings</a>
+            </ul>
+        </div>
+        <div class="properties">
+            <div class="user-form">
+                <p class="title">Employee #@Html.DisplayFor(model => model.Employee.Id)</p>
+                <div class="field-container">
+                    <div class="text-group">
+                        <div class="identifier">
+                            <p class="title">First Name</p>
+                        </div>
+                        <div class="info-content">
+                            <p class="info">@Html.DisplayFor(model => model.Employee.FirstName)</p>
+                        </div>
+                    </div>
+                    <div class="text-group">
+                        <div class="identifier">
+                            <p class="title">Last Name</p>
+                        </div>
+                        <div class="info-content">
+                            <p class="info">@Html.DisplayFor(model => model.Employee.LastName)</p>
+                        </div>
+                    </div>
+                    <div class="text-group">
+                        <div class="identifier">
+                            <p class="title">Skills</p>
+                        </div>
+                        <div class="info-content">
+                            <p class="info">@Html.DisplayFor(model => model.Employee.Skills)</p>
+                        </div>
+                    </div>
+                    <div class="text-group">
+                        <div class="identifier">
+                            <p class="title">Availablity</p>
+                        </div>
+                        <div class="info-content">
+                            <p class="info">@Html.DisplayFor(model => model.Employee.Availability)</p>
+                        </div>
+                    </div>
+                    <div class="text-group">
+                        <div class="identifier">
+                            <p class="title">Status</p>
+                        </div>
+                        <div class="info-content">
+                            <p class="info">@Html.DisplayFor(model => model.Employee.Status)</p>
+                        </div>
+                    </div>
+                    <div class="text-group">
+                        <div class="identifier">
+                            <p class="title">Training Orders</p>
+                        </div>
+                        <div class="info-content">
+                            <p class="info">@Html.DisplayFor(model => model.Employee.TrainingOrders)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
