--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WCSTrainer.Pages.TrainingOrders.ConcludeModel
+@model WCSTrainer.Pages.TrainingOrders.VerificationModel
 @{
 }
 
@@ -21,8 +21,8 @@
                     <form method="post">
 
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <input type="hidden" asp-for="TrainingOrder.Id"/>
-                        
+                        <input type="hidden" asp-for="TrainingOrder.Id" />
+
                         <input asp-for="TrainingOrder.description" type="hidden" />
                         <input asp-for="TrainingOrder.createDate" type="hidden" />
                         <input asp-for="TrainingOrder.beginDate" type="hidden" />
@@ -34,7 +34,7 @@
                         <input asp-for="TrainingOrder.medium" type="hidden" />
                         <input asp-for="TrainingOrder.skill" type="hidden" />
 
-                        <input asp-for="TrainingOrder.status" type="hidden" value="Completed" />
+                        <input asp-for="TrainingOrder.status" type="hidden" value="Verified" />
 
                         @if (!Model.TrainingOrder.status.Equals("Awaiting Approval")) {
                             <div class="text-group">
@@ -84,10 +84,11 @@
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Closing Notes</p>
+                                    <p class="control-label">How effective was the training?</p>
                                 </div>
                                 <textarea rows="5" /></textarea>
                             </div>
+
                         </div>
                         <div class="form-group">
                             <div class="btn-container">
@@ -100,9 +101,3 @@
         </div>
     </div>
 </div>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
